--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -27,9 +27,11 @@
                             <td><%= value.nik %></td>
                             <td><%= value.name %></td>
                             <td>
-                                <a href="/contact/<%= value.nik %>" class="btn btn-sm btn-primary"><i class="bi bi-info-circle"></i></a>
-                                <a href="/contact/<%= value.nik %>" class="btn btn-sm btn-success"><i class="bi bi-pencil"></i></a>
-                                <a href="/contact/delete/<%= value.nik %>" class="btn btn-sm btn-danger" onclick="return confirm('Yakin?')"><i class="bi bi-trash"></i></a>
+                                <form action="/contact/<%= value.nik %>" method="post">
+                                    <a href="/contact/<%= value.nik %>" class="btn btn-sm btn-primary"><i class="bi bi-info-circle"></i></a>
+                                    <a href="/contact/<%= value.nik %>" class="btn btn-sm btn-success"><i class="bi bi-pencil"></i></a>
+                                    <button type="submit" class="btn btn-sm btn-danger" onclick="return confirm('Yakin?')"><i class="bi bi-trash"></i></button>
+                                </form>
                             </td>
                         </tr>
                     <% }) %>
