--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -29,7 +29,7 @@
                             <td>
                                 <form action="/contact/<%= value.nik %>" method="post">
                                     <a href="/contact/<%= value.nik %>" class="btn btn-sm btn-primary"><i class="bi bi-info-circle"></i></a>
-                                    <a href="/contact/<%= value.nik %>" class="btn btn-sm btn-success"><i class="bi bi-pencil"></i></a>
+                                    <a href="/contact/edit/<%= value.nik %>" class="btn btn-sm btn-success"><i class="bi bi-pencil"></i></a>
                                     <button type="submit" class="btn btn-sm btn-danger" onclick="return confirm('Yakin?')"><i class="bi bi-trash"></i></button>
                                 </form>
                             </td>
